--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,8 +2,8 @@
 
 .new-tweet {
   padding-top: 20px;
-  margin-right: 10px;
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 textarea {
@@ -18,7 +18,6 @@ textarea {
   resize: none;
   display: flex;
   align-items: flex-start;
-  width: 100%;
 }
 
 button {
